# dataservice

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  README.md  README.rst  async_gen.py  docker-compose.yml  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml  publish_dev.yml  publish_v2.yml  python-app.yml
dataservice/: __init__.py  _utils.py  ab_client.py  abclient.py  cache.py  cli.py  client.py  clients.py  config.py  data.py  devices.py  exceptions.py  files.py  http.py  log.py  logger.py  logging_config.py  logs.py  messages.py  models.py  pipeline.py  service.py  utils.py  worker.py  workers.py
dataservice/templates/: template.py.j2
examples/: books_scraper.py  crawler.py  logging_config.py  toy_example.py
examples/api/: api_client.py  api_server.py  models.py
examples/scraper/: books_scraper.py  books_scraper_improved.py  books_scraper_initial.py  crawler.py  interceptor_button.py  interceptor_scroll.py  long_running_async_job.py  scroll_to_bottom.js
examples/scraper/stages/: books_scraper_improved.py
examples/stages/: books_scraper_improved.py  books_scraper_initial.py
source/: books_scraper.rst  conf.py  dataservice.rst  examples.rst  index.rst  modules.rst
source/examples/: browser_scraper.rst  crawler.rst  http_crawler.rst  http_scraper.rst  rest_client.rst  scrape_books.rst
source/examples/books_scraper/: improved.rst  initial.rst
source/examples/browser_scraper/: infinite_scroll.rst  load_more.rst
source/examples/http_scraper/: improved.rst
tests/: clients.py  conftest.py  pytest.ini  test_client.py  test_messages.py  test_models.py  test_service.py  test_workers.py  tests_http.py
tests/integration/: test_books_to_scrape.py  test_books_to_scrape_cache_no_writes.py  test_books_to_scrape_httpx.py  test_books_to_scrape_pw.py  test_pw_extra_http_headers.py  test_pw_intercept.py  test_pw_intercept_2.py  test_site.py
tests/integration/data/: json_c.json  pickle_c.pkl
tests/unit/: clients.py  conftest.py  test_base_client.py  test_cache.py  test_client.py  test_config.py  test_data.py  test_httpx_client.py  test_logs.py  test_models.py  test_pipeline.py  test_playwright_client.py  test_service.py  test_toy_client_service.py  test_utils.py  test_worker.py  toy_clients.py
