[tool.poetry]
name = "dataservice"
version = "0.0.1"
description = "Lightweight async scraping library"
authors = ["lucaromagnoli <romagnoli.luca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
html5lib = "^1.1"
httpx = "^0.27.0"
pydantic = "^2.8.2"
tenacity = "^9.0.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.23.7"
pytest-httpx = "^0.30.0"
pre-commit = "^3.8.0"
types-beautifulsoup4 = "^4.12.0.20240511"
pytest-datadir = "^1.5.0"
pytest-cov = "^5.0.0"
sphinx = "^8.0.2"
ruff = "^0.5.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
