[tool.poetry]
name = "dataservice"
version = "0.0.1"
description = "Lightweight async data gathering for Python"
authors = ["lucaromagnoli <romagnoli.luca@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
html5lib = "^1.1"
httpx = "^0.27.0"
pydantic = "^2.8.2"
tenacity = "^9.0.0"
aiocron = "^1.8"


[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pre-commit = "^3.8.0"
pytest = "^7.2.1"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
pytest-datadir = "^1.5.0"
pytest-httpx = "^0.30.0"
pytest-mock = "^3.14.0"
ruff = "^0.5.6"
sphinx = "^8.0.2"
sphinx-autodoc-typehints = "^2.2.3"
types-beautifulsoup4 = "^4.12.0.20240511"
autodoc-pydantic = "^2.2.0"
pydata-sphinx-theme = "^0.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "F401", "I"]
